# mediastreamer2

./: .gitignore  .gitmodules  CMakeLists.txt  make.bat  speex_library.cmake
include/mediastreamer2/: allfilters.h  msfilerec.h
src/: .gitignore  voipdescs.h
src/audiofilters/: genericplc.c  msspeex.c  winsnd3.c
src/otherfilters/: msrtp.c
src/videofilters/: h264dec.c  jpegwriter.c  nowebcam.c  videodec.c  videoenc.c
